--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -17,15 +17,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      # - name: Set up Python ${{ matrix.python-version }}
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
 
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag gtfonow_test:${{ matrix.python-version }}-${{ matrix.linux-distro }} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg LINUX_DISTRO=${{ matrix.linux-distro }}
+          docker build . --file Dockerfile --tag gtfonow_test:${{ matrix.python-version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg LINUX_DISTRO=${{ matrix.linux-distro }}
 
       - name: Run tests
         run: |
-          docker run gtfonow_test:${{ matrix.python-version }}-${{ matrix.linux-distro }}
+          docker run gtfonow_test:${{ matrix.python-version }}
