--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        linux-distro: ["ubuntu:latest", "debian:latest"]
+        python-version: [2.6, 2.7, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11, 3.12]
 
     steps:
       - uses: actions/checkout@v4
@@ -24,8 +23,15 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag gtfonow_test:${{ matrix.python-version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }} --build-arg LINUX_DISTRO=${{ matrix.linux-distro }}
+          docker build . --file Dockerfile --tag gtfonow_test:${{ matrix.python-version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }}
 
       - name: Run tests
         run: |
-          docker run gtfonow_test:${{ matrix.python-version }}
+          docker run --name gtfonow_test:${{ matrix.python-version }} -d gtfonow_test:${{ matrix.python-version }}
+
+      - name: Run Pytest
+        run: docker exec -it gtfonow_test:${{ matrix.python-version }} pytest -v
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
