--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -32,7 +32,7 @@ jobs:
           docker run --name gtfonow_test_${{ matrix.python-version }} -d gtfonow_test:${{ matrix.python-version }}
 
       - name: Run Pytest
-        run: docker exec -it gtfonow_test_${{ matrix.python-version }} pytest -v
+        run: docker exec gtfonow_test_${{ matrix.python-version }} pytest -v
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
