--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -17,12 +17,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      # - name: Set up Python ${{ matrix.python-version }}
-      #   uses: actions/setup-python@v4
-      #   with:
-      #     python-version: ${{ matrix.python-version }}
-
       - name: Build the Docker image
         run: |
           docker build . --file Dockerfile --tag gtfonow_test:${{ matrix.python-version }} --build-arg PYTHON_VERSION=${{ matrix.python-version }}
@@ -33,7 +27,12 @@ jobs:
 
       - name: Run Pytest
         run: docker exec gtfonow_test_${{ matrix.python-version }} su -l lowpriv -c "pytest -v --cov=gtfonow --cov-report=xml --cov-report=term-missing"
+      - name: Copy coverage report from Docker container to host
+        run: docker cp gtfonow_test_${{ matrix.python-version }}:/home/lowpriv/coverage.xml .
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
