--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -27,23 +27,10 @@ jobs:
         if: env.changes != 'true'
         run: exit 0
       - uses: actions/setup-python@v4
-      - run: pip install pyyaml
-      - run: python gtfobin_update.py
-      - name: Configure git
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-
-      - name: Create new branch
-        run: |
-          git checkout -b update-gtfobins-${{ github.run_id }}
-
-      - name: Commit and push changes
-        run: |
-          git add .
-          git commit -m "Update GTFOBins"
-          git push origin update-gtfobins-${{ github.run_id }}
-
+      - name: Install pyyaml
+        run: pip install pyyaml
+      - name: Patch script
+        run: python gtfobin_update.py
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
@@ -51,3 +38,4 @@ jobs:
           branch: update-gtfobins-${{ github.run_id }}
           body: "This is an automated PR to update the GTFOBin submodule."
           delete-branch: true
+          commit-message: Update GTFOBins
