--- a/.github/workflows/docker-pytest.yml
+++ b/.github/workflows/docker-pytest.yml
@@ -28,7 +28,7 @@ jobs:
           docker run --name gtfonow_test_${{ matrix.python-version }} -d gtfonow_test:${{ matrix.python-version }}
 
       - name: Run Pytest
-        run: docker exec -u lowpriv gtfonow_test_${{ matrix.python-version }} pytest -v --cov=gtfonow --cov-report=xml --cov-report=term-missing
+        run: docker exec -u lowpriv gtfonow_test_${{ matrix.python-version }} bash -c "pytest -v --cov=gtfonow --cov-report=xml --cov-report=term-missing"
       - name: Copy coverage report from Docker container to host
         run: docker cp gtfonow_test_${{ matrix.python-version }}:/home/lowpriv/coverage.xml .
 
